DO $$
BEGIN
    CREATE TYPE user_role AS ENUM ('admin', 'teacher');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
    CREATE TYPE student_status AS ENUM ('active', 'paused', 'archived');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
    CREATE TYPE staff_status AS ENUM ('active', 'archived');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
    CREATE TYPE document_status AS ENUM ('draft', 'posted', 'void');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
    CREATE TYPE payment_status AS ENUM ('pending', 'confirmed', 'void');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
    CREATE TYPE account_type AS ENUM ('asset', 'liability', 'equity', 'revenue', 'expense');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
    CREATE TYPE journal_entry_status AS ENUM ('draft', 'posted', 'void');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
    CREATE TYPE journal_source_type AS ENUM ('student_charge', 'payment', 'expense', 'staff_payout', 'opening_balance', 'manual_entry', 'reversal');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
    CREATE TYPE statement_row_status AS ENUM ('new', 'draft_created', 'unmatched', 'ignored', 'deleted');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END $$;

CREATE TABLE IF NOT EXISTS accounts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(32) NOT NULL UNIQUE,
    name VARCHAR(150) NOT NULL,
    type account_type NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT chk_accounts_code CHECK (char_length(code) > 0)
);

CREATE TABLE IF NOT EXISTS staff (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    role VARCHAR(100) NOT NULL,
    first_name VARCHAR(100) NOT NULL,
    family_name VARCHAR(100) NULL,
    father_name VARCHAR(100) NULL,
    status staff_status NOT NULL DEFAULT 'active',
    payout_card_number VARCHAR(64) NULL,
    fixed_salary_amount NUMERIC(10,2) NULL,
    profile_image_path VARCHAR(255) NULL,
    phone VARCHAR(32) NULL,
    email VARCHAR(255) NULL,
    comments TEXT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT chk_staff_fixed_salary_amount CHECK (fixed_salary_amount IS NULL OR fixed_salary_amount >= 0)
);

CREATE TABLE IF NOT EXISTS users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    staff_id BIGINT NOT NULL,
    username VARCHAR(100) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    profile_image_path VARCHAR(255) NULL,
    role user_role NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    last_login_at TIMESTAMPTZ NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_users_staff FOREIGN KEY (staff_id) REFERENCES staff(id)
);

CREATE TABLE IF NOT EXISTS plans (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL UNIQUE,
    lesson_count NUMERIC(5,2) NOT NULL,
    lesson_price NUMERIC(10,2) NOT NULL,
    teacher_share_per_lesson NUMERIC(10,2) NOT NULL,
    is_assignable BOOLEAN NOT NULL DEFAULT TRUE,
    comments TEXT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT chk_plans_values CHECK (
        lesson_count >= 0 AND lesson_price >= 0 AND teacher_share_per_lesson >= 0
    )
);

CREATE TABLE IF NOT EXISTS students (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    first_name VARCHAR(100) NOT NULL,
    family_name VARCHAR(100) NULL,
    father_name VARCHAR(100) NULL,
    profile_image_path VARCHAR(255) NULL,
    phone VARCHAR(32) NULL,
    email VARCHAR(255) NULL,
    status student_status NOT NULL DEFAULT 'active',
    plan_id BIGINT NOT NULL,
    staff_id BIGINT NOT NULL,
    discount_amount NUMERIC(10,2) NOT NULL DEFAULT 0,
    joined_at TIMESTAMPTZ NOT NULL,
    comments TEXT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_students_plan FOREIGN KEY (plan_id) REFERENCES plans(id),
    CONSTRAINT fk_students_staff FOREIGN KEY (staff_id) REFERENCES staff(id),
    CONSTRAINT chk_students_discount CHECK (discount_amount >= 0)
);

CREATE TABLE IF NOT EXISTS student_charges (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id BIGINT NOT NULL,
    charge_month DATE NOT NULL,
    plan_id BIGINT NOT NULL,
    staff_id BIGINT NOT NULL,
    amount NUMERIC(10,2) NOT NULL,
    status document_status NOT NULL DEFAULT 'draft',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    posted_at TIMESTAMPTZ NULL,
    comment TEXT NULL,
    CONSTRAINT uq_student_charge_month UNIQUE (student_id, charge_month),
    CONSTRAINT fk_student_charges_student FOREIGN KEY (student_id) REFERENCES students(id),
    CONSTRAINT fk_student_charges_plan FOREIGN KEY (plan_id) REFERENCES plans(id),
    CONSTRAINT fk_student_charges_staff FOREIGN KEY (staff_id) REFERENCES staff(id),
    CONSTRAINT chk_student_charges_amount CHECK (amount > 0)
);

CREATE INDEX IF NOT EXISTS idx_student_charges_staff_month ON student_charges (staff_id, charge_month);

CREATE TABLE IF NOT EXISTS payments (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id BIGINT NOT NULL,
    payment_date TIMESTAMPTZ NOT NULL,
    amount NUMERIC(10,2) NOT NULL,
    method VARCHAR(50) NOT NULL,
    source VARCHAR(50) NOT NULL,
    external_reference VARCHAR(255) NULL,
    status payment_status NOT NULL DEFAULT 'pending',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    confirmed_at TIMESTAMPTZ NULL,
    comment TEXT NULL,
    CONSTRAINT fk_payments_student FOREIGN KEY (student_id) REFERENCES students(id),
    CONSTRAINT chk_payments_amount CHECK (amount > 0)
);

CREATE INDEX IF NOT EXISTS idx_payments_student_date ON payments (student_id, payment_date);
ALTER TABLE payments ADD COLUMN IF NOT EXISTS covered_month DATE NULL;
ALTER TABLE payments ADD COLUMN IF NOT EXISTS import_row_id BIGINT NULL;

DROP TABLE IF EXISTS student_cards;

CREATE TABLE IF NOT EXISTS statement_import_batches (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    original_filename VARCHAR(255) NOT NULL,
    stored_filename VARCHAR(255) NOT NULL,
    file_hash CHAR(64) NOT NULL,
    account_number VARCHAR(64) NULL,
    currency VARCHAR(16) NULL,
    imported_by_user_id BIGINT NOT NULL,
    total_rows INTEGER NOT NULL DEFAULT 0,
    new_rows INTEGER NOT NULL DEFAULT 0,
    duplicate_rows INTEGER NOT NULL DEFAULT 0,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_statement_import_batches_user FOREIGN KEY (imported_by_user_id) REFERENCES users(id)
);

CREATE UNIQUE INDEX IF NOT EXISTS idx_statement_import_batches_file_hash ON statement_import_batches (file_hash);

CREATE TABLE IF NOT EXISTS statement_import_rows (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    batch_id BIGINT NOT NULL,
    row_number INTEGER NOT NULL,
    row_hash CHAR(64) NOT NULL,
    owner_edrpou VARCHAR(32) NULL,
    owner_mfo VARCHAR(32) NULL,
    account_number VARCHAR(64) NULL,
    currency VARCHAR(16) NULL,
    document_number VARCHAR(64) NULL,
    operation_date DATE NOT NULL,
    bank_mfo VARCHAR(32) NULL,
    bank_name VARCHAR(255) NULL,
    correspondent_account VARCHAR(64) NULL,
    correspondent_edrpou VARCHAR(32) NULL,
    correspondent_name VARCHAR(255) NULL,
    amount NUMERIC(10,2) NOT NULL,
    payment_purpose TEXT NULL,
    direction VARCHAR(16) NOT NULL,
    status statement_row_status NOT NULL DEFAULT 'new',
    raw_payload JSONB NOT NULL,
    suggested_student_ids JSONB NOT NULL DEFAULT '[]'::jsonb,
    matched_student_id BIGINT NULL,
    payment_id BIGINT NULL,
    expense_id BIGINT NULL,
    payout_id BIGINT NULL,
    created_document_type VARCHAR(20) NULL,
    review_note TEXT NULL,
    reviewed_at TIMESTAMPTZ NULL,
    reviewed_by_user_id BIGINT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_statement_import_rows_batch FOREIGN KEY (batch_id) REFERENCES statement_import_batches(id),
    CONSTRAINT fk_statement_import_rows_student FOREIGN KEY (matched_student_id) REFERENCES students(id),
    CONSTRAINT fk_statement_import_rows_reviewer FOREIGN KEY (reviewed_by_user_id) REFERENCES users(id),
    CONSTRAINT chk_statement_import_rows_direction CHECK (direction IN ('incoming', 'outgoing')),
    CONSTRAINT chk_statement_import_rows_created_document_type CHECK (
        created_document_type IS NULL OR created_document_type IN ('payment', 'expense', 'payout')
    )
);

CREATE UNIQUE INDEX IF NOT EXISTS idx_statement_import_rows_row_hash ON statement_import_rows (row_hash);
ALTER TABLE statement_import_rows ADD COLUMN IF NOT EXISTS expense_id BIGINT NULL;
ALTER TABLE statement_import_rows ADD COLUMN IF NOT EXISTS payout_id BIGINT NULL;
ALTER TABLE statement_import_rows ADD COLUMN IF NOT EXISTS created_document_type VARCHAR(20) NULL;
CREATE INDEX IF NOT EXISTS idx_statement_import_rows_batch_status ON statement_import_rows (batch_id, status);
CREATE INDEX IF NOT EXISTS idx_statement_import_rows_operation_date ON statement_import_rows (operation_date DESC);
CREATE INDEX IF NOT EXISTS idx_statement_import_rows_matched_student ON statement_import_rows (matched_student_id);
CREATE INDEX IF NOT EXISTS idx_statement_import_rows_created_document_type ON statement_import_rows (created_document_type);

CREATE TABLE IF NOT EXISTS expense_categories (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(32) NOT NULL UNIQUE,
    name VARCHAR(100) NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS expenses (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    expense_date TIMESTAMPTZ NOT NULL,
    category_id BIGINT NOT NULL,
    amount NUMERIC(10,2) NOT NULL,
    paid_from_account_id BIGINT NOT NULL,
    staff_id BIGINT NULL,
    status document_status NOT NULL DEFAULT 'draft',
    description TEXT NULL,
    reason VARCHAR(100) NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    posted_at TIMESTAMPTZ NULL,
    CONSTRAINT fk_expenses_category FOREIGN KEY (category_id) REFERENCES expense_categories(id),
    CONSTRAINT fk_expenses_paid_from FOREIGN KEY (paid_from_account_id) REFERENCES accounts(id),
    CONSTRAINT fk_expenses_staff FOREIGN KEY (staff_id) REFERENCES staff(id),
    CONSTRAINT chk_expenses_amount CHECK (amount > 0)
);

ALTER TABLE expenses ADD COLUMN IF NOT EXISTS import_row_id BIGINT NULL;

CREATE INDEX IF NOT EXISTS idx_expenses_staff ON expenses (staff_id);

CREATE TABLE IF NOT EXISTS staff_payouts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    staff_id BIGINT NOT NULL,
    payout_date TIMESTAMPTZ NOT NULL,
    amount NUMERIC(10,2) NOT NULL,
    status document_status NOT NULL DEFAULT 'draft',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    posted_at TIMESTAMPTZ NULL,
    comment TEXT NULL,
    CONSTRAINT fk_staff_payouts_staff FOREIGN KEY (staff_id) REFERENCES staff(id),
    CONSTRAINT chk_staff_payouts_amount CHECK (amount > 0)
);

ALTER TABLE staff_payouts ADD COLUMN IF NOT EXISTS import_row_id BIGINT NULL;

CREATE INDEX IF NOT EXISTS idx_staff_payouts_staff_date ON staff_payouts (staff_id, payout_date);

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'chk_statement_import_rows_created_document_type'
    ) THEN
        ALTER TABLE statement_import_rows
            ADD CONSTRAINT chk_statement_import_rows_created_document_type
            CHECK (
                created_document_type IS NULL OR created_document_type IN ('payment', 'expense', 'payout')
            );
    END IF;
END $$;

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'fk_payments_import_row'
    ) THEN
        ALTER TABLE payments
            ADD CONSTRAINT fk_payments_import_row
            FOREIGN KEY (import_row_id) REFERENCES statement_import_rows(id);
    END IF;
END $$;

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'fk_statement_import_rows_expense'
    ) THEN
        ALTER TABLE statement_import_rows
            ADD CONSTRAINT fk_statement_import_rows_expense
            FOREIGN KEY (expense_id) REFERENCES expenses(id);
    END IF;
END $$;

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'fk_statement_import_rows_payout'
    ) THEN
        ALTER TABLE statement_import_rows
            ADD CONSTRAINT fk_statement_import_rows_payout
            FOREIGN KEY (payout_id) REFERENCES staff_payouts(id);
    END IF;
END $$;

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'fk_statement_import_rows_payment'
    ) THEN
        ALTER TABLE statement_import_rows
            ADD CONSTRAINT fk_statement_import_rows_payment
            FOREIGN KEY (payment_id) REFERENCES payments(id);
    END IF;
END $$;

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'fk_expenses_import_row'
    ) THEN
        ALTER TABLE expenses
            ADD CONSTRAINT fk_expenses_import_row
            FOREIGN KEY (import_row_id) REFERENCES statement_import_rows(id);
    END IF;
END $$;

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'fk_staff_payouts_import_row'
    ) THEN
        ALTER TABLE staff_payouts
            ADD CONSTRAINT fk_staff_payouts_import_row
            FOREIGN KEY (import_row_id) REFERENCES statement_import_rows(id);
    END IF;
END $$;

CREATE UNIQUE INDEX IF NOT EXISTS idx_payments_import_row_unique ON payments (import_row_id) WHERE import_row_id IS NOT NULL;
CREATE UNIQUE INDEX IF NOT EXISTS idx_expenses_import_row_unique ON expenses (import_row_id) WHERE import_row_id IS NOT NULL;
CREATE UNIQUE INDEX IF NOT EXISTS idx_staff_payouts_import_row_unique ON staff_payouts (import_row_id) WHERE import_row_id IS NOT NULL;

CREATE TABLE IF NOT EXISTS journal_entries (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    entry_date TIMESTAMPTZ NOT NULL,
    reference VARCHAR(255) NULL,
    description TEXT NULL,
    source_type journal_source_type NOT NULL,
    source_id BIGINT NULL,
    reversal_of_journal_entry_id BIGINT NULL,
    status journal_entry_status NOT NULL DEFAULT 'draft',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_journal_entries_source UNIQUE (source_type, source_id),
    CONSTRAINT fk_journal_entries_reversal_of FOREIGN KEY (reversal_of_journal_entry_id) REFERENCES journal_entries(id)
);

CREATE INDEX IF NOT EXISTS idx_journal_entries_source ON journal_entries (source_type, source_id);
CREATE INDEX IF NOT EXISTS idx_journal_entries_date ON journal_entries (entry_date);
CREATE INDEX IF NOT EXISTS idx_journal_entries_reversal_of ON journal_entries (reversal_of_journal_entry_id);

CREATE TABLE IF NOT EXISTS journal_entry_lines (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    journal_entry_id BIGINT NOT NULL,
    account_id BIGINT NOT NULL,
    debit_amount NUMERIC(10,2) NOT NULL DEFAULT 0,
    credit_amount NUMERIC(10,2) NOT NULL DEFAULT 0,
    student_id BIGINT NULL,
    staff_id BIGINT NULL,
    note TEXT NULL,
    CONSTRAINT fk_journal_lines_entry FOREIGN KEY (journal_entry_id) REFERENCES journal_entries(id),
    CONSTRAINT fk_journal_lines_account FOREIGN KEY (account_id) REFERENCES accounts(id),
    CONSTRAINT fk_journal_lines_student FOREIGN KEY (student_id) REFERENCES students(id),
    CONSTRAINT fk_journal_lines_staff FOREIGN KEY (staff_id) REFERENCES staff(id),
    CONSTRAINT chk_journal_line_nonnegative CHECK (debit_amount >= 0 AND credit_amount >= 0),
    CONSTRAINT chk_journal_line_one_side CHECK (
        (debit_amount > 0 AND credit_amount = 0) OR
        (debit_amount = 0 AND credit_amount > 0)
    )
);

CREATE INDEX IF NOT EXISTS idx_journal_lines_entry ON journal_entry_lines (journal_entry_id);
CREATE INDEX IF NOT EXISTS idx_journal_lines_account ON journal_entry_lines (account_id);
CREATE INDEX IF NOT EXISTS idx_journal_lines_student ON journal_entry_lines (student_id);
CREATE INDEX IF NOT EXISTS idx_journal_lines_staff ON journal_entry_lines (staff_id);

INSERT INTO accounts (code, name, type, created_at) VALUES
    ('1010', 'Cash', 'asset', CURRENT_TIMESTAMP),
    ('1020', 'Bank', 'asset', CURRENT_TIMESTAMP),
    ('1100', 'Accounts Receivable - Students', 'asset', CURRENT_TIMESTAMP),
    ('2100', 'Accounts Payable - Staff', 'liability', CURRENT_TIMESTAMP),
    ('3100', 'Owner Equity', 'equity', CURRENT_TIMESTAMP),
    ('4100', 'Revenue - Student Fees', 'revenue', CURRENT_TIMESTAMP),
    ('5100', 'Staff Payout Expense', 'expense', CURRENT_TIMESTAMP),
    ('5200', 'Advertising Expense', 'expense', CURRENT_TIMESTAMP),
    ('5300', 'Software Expense', 'expense', CURRENT_TIMESTAMP),
    ('5400', 'Other Expense', 'expense', CURRENT_TIMESTAMP)
ON CONFLICT (code) DO NOTHING;

INSERT INTO expense_categories (code, name, created_at) VALUES
    ('ADS', 'Advertising', CURRENT_TIMESTAMP),
    ('SOFT', 'Software', CURRENT_TIMESTAMP),
    ('OTHER', 'Other', CURRENT_TIMESTAMP)
ON CONFLICT (code) DO NOTHING;
